# captureInfraredCamera

./: .gitignore  CMakeLists.txt  ImgLabel.cpp  ImgLabel.h  ImgWindow.cpp  ImgWindow.h  MainWindow.cpp  MainWindow.h  QCAP.H  main.cpp  mybat.cmd  ui_ImgWindow.h  ui_MainWindow.h  uictool.cmd
README/: ~$$结构.~vsdx  结构.vsdx
ui/: ImgWindow.ui  MainWindow.ui
